--- a/README_test.ipynb
+++ b/README_test.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- [Description](#description)\n",
+    "- [Installation](#installation)\n",
+    "- [Example](#example)\n",
+    "  - [Simple 2-state MDP example](#simple-2-mdp-example)\n",
+    "- [License](#license)\n",
+    "- [GitHub Repository](#github-repository)\n",
+    "- [Contributors](#contributors)\n",
+    "- [References](#references)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Description**\n",
     "\n",
     "The value_iteration python package provides an implementation of the value iteration algorithm. This algorithm is a well-known solution method for finding the optimal policy of a Markov Decision Process (MDP). \n",
@@ -134,6 +148,50 @@
     "    print(f\"If {s}, then Sam should {optimal_policy[s]}.\")\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## License\n",
+    "\n",
+    "Copyright (C) 2025 Niharika Reddy Peddinenikalva\n",
+    "\n",
+    "This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n",
+    "\n",
+    "This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n",
+    "\n",
+    "You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GitHub Repository\n",
+    "\n",
+    "Source files for the packages can be found at\n",
+    "<https://github.com/turtlesoul25/value_iteration>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contributors\n",
+    "\n",
+    "- Niharika Reddy Peddinenikalva: [email](mailto:n.peddinenikalva@lancaster.ac.uk) (**Author**)\n",
+    "  (**Maintainer**) (**Creator**) (**Translator**)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "Poole, D. L., & Mackworth, A. K. (2017). Artificial Intelligence: Foundations of Computational Agents (2nd ed.). Cambridge: Cambridge University Press."
    ]
   }
  ],
