--- a/README_test.ipynb
+++ b/README_test.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "For a range of problems that can be modelled as MDPs, the value iteration algorithm finds the optimal policy by maximising a value function iteratively. \n",
     "\n",
-    "To learn more about MDPs and the value iteration algorithm, the user can refer to Sections [9.5](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.html) and [9.5.1](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.SS1.html) of [Artificial Intelligence: Foundations and Computational Agents 2nd edition](https://artint.info/2e/html2e/ArtInt2e.html)\n",
+    "To learn more about MDPs and the value iteration algorithm, the user can refer to Sections [9.5](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.html) and [9.5.1](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.SS1.html) of [Artificial Intelligence: Foundations and Computational Agents 2nd edition](https://artint.info/2e/html2e/ArtInt2e.html).\n",
     "\n",
     "**Key Features**\n",
     "- Implements the value iteration function described by the pseudocode in Figure 9.16 within [Section 9.5.2](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.SS2.html) of [Artificial Intelligence: Foundations and Computational Agents 2nd edition](https://artint.info/2e/html2e/ArtInt2e.html).\n",
@@ -45,9 +45,11 @@
    "source": [
     "## **Installation**\n",
     "\n",
-    "This python package can be installed from github with pip\n",
+    "This python package can be installed from GitHub with pip.\n",
     "#### installing from github with pip\n",
-    "```python -m pip install \"git+https://github.com/turtlesoul25/value_iteration\"```"
+    "``` python\n",
+    "python -m pip install \"git+https://github.com/turtlesoul25/value_iteration\"\n",
+    "```"
    ]
   },
   {
@@ -65,10 +67,10 @@
     "This example is taken from [Example 9.27](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.html#Ch9.Thmciexamplered27) from [Artificial Intelligence: Foundations and Computational Agents 2nd edition](https://artint.info/2e/html2e/ArtInt2e.html). \n",
     "\n",
     "Suppose Sam wanted to make an informed decision about whether to party or relax over the weekend. Sam prefers to party, but is worried about getting sick. Such a problem can be modeled as an MDP with two states, _healthy_ and _sick_, and two actions, _relax_ and _party_. Thus, the set of states is \n",
-    "$$S = \\{\\textit{healthy}, \\textit{sick} \\}$$\n",
+    "$$S = \\{\\textit{healthy}, \\textit{sick} \\}.$$\n",
     "\n",
     "The set of actions is \n",
-    "$$A = \\{\\textit{relax}, \\textit{party} \\}$$\n",
+    "$$A = \\{\\textit{relax}, \\textit{party} \\}.$$\n",
     "\n",
     "Based on experience, Sam estimates that $P(s' \\vert s, a)$ is given by \n",
     "\n",
@@ -156,8 +158,6 @@
    "source": [
     "## License\n",
     "\n",
-    "Copyright (C) 2025 Niharika Reddy Peddinenikalva\n",
-    "\n",
     "This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n",
     "\n",
     "This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n",
@@ -172,7 +172,7 @@
     "## GitHub Repository\n",
     "\n",
     "Source files for the packages can be found at\n",
-    "<https://github.com/turtlesoul25/value_iteration>"
+    "<https://github.com/turtlesoul25/value_iteration>."
    ]
   },
   {
