--- a/README_test.ipynb
+++ b/README_test.ipynb
@@ -15,6 +15,7 @@
     "- [Installation](#installation)\n",
     "- [Example](#example)\n",
     "  - [Simple 2-state MDP example](#simple-2-mdp-example)\n",
+    "  - [$n \\times m$ Gridworld example](#gridworld-example)\n",
     "- [License](#license)\n",
     "- [GitHub Repository](#github-repository)\n",
     "- [Contributors](#contributors)\n",
@@ -150,6 +151,14 @@
     "    print(f\"If {s}, then Sam should {optimal_policy[s]}.\")\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gridworld example\n",
+    "To see a more detailed example of how value iteration can be used to solve a problem in a Gridworld environment, see `Examples/Gridworld_nxm/Solving_Gridworld.ipynb` in this repository."
    ]
   },
   {
