--- a/README.ipynb
+++ b/README.ipynb
@@ -15,7 +15,7 @@
     "- [Installation](#installation)\n",
     "- [Example](#example)\n",
     "  - [Simple 2-state MDP example](#simple-2-mdp-example)\n",
-    "  - [$n \\times m$ Gridworld example](#gridworld-example)\n",
+    "  - [n x m Gridworld example](#gridworld-example)\n",
     "- [License](#license)\n",
     "- [GitHub Repository](#github-repository)\n",
     "- [Contributors](#contributors)\n",
