updating value_iteration function name

--- a/README.ipynb
+++ b/README.ipynb
@@ -36,8 +36,8 @@
     "\n",
     "**Key Features**\n",
     "- Implements the value iteration function described by the pseudocode in Figure 9.16 within [Section 9.5.2](https://artint.info/2e/html2e/ArtInt2e.Ch9.S5.SS2.html) of [Artificial Intelligence: Foundations and Computational Agents 2nd edition](https://artint.info/2e/html2e/ArtInt2e.html).\n",
-    "- Includes an example of a GridWorld problem which is solved using the `value_iteration` function included in this package.\n",
-    "- Can be used for any MDP with appropriate definitions of states, actions, transition probabilities, reward functions, discount factors, and termination conditions.\n"
+    "- Includes an example of a Gridworld problem which is solved using the `value_iteration` function included in this package.\n",
+    "- Can be used for any MDP with appropriate definitions of states, actions, transition probabilities, reward functions, discount factors, and termination conditions (maximum number of iterations or value function convergence criteria).\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "This python package can be installed from GitHub with pip.\n",
     "#### installing from github with pip\n",
     "``` python\n",
-    "python -m pip install \"git+https://github.com/turtlesoul25/value_iteration\"\n",
+    "python -m pip install \"git+https://github.com/turtlesoul25/value_iteration#subdirectory=package\"\n",
     "```"
    ]
   },
@@ -102,6 +102,7 @@
    "metadata": {},
    "source": [
     "``` python\n",
+    "from value_iteration import value_iteration\n",
     "S = {\"sick\", \"healthy\"} # set of states\n",
     "A = {\"relax\", \"party\"}  # set of actions\n",
     "def P(sp, s, a): # function to calculate transition probabilities\n",
@@ -143,7 +144,7 @@
     "            return 2\n",
     "\n",
     "# Implementing the value iteration algorithm to solve the MDP\n",
-    "results = Value_iteration(S, A, P, R, 0.8, 1000)    # implement algorithm\n",
+    "results = value_iteration(S, A, P, R, 0.8, 1000)    # implement algorithm\n",
     "optimal_policy = results[\"optimal_policy\"]          # optimal policy\n",
     "value_function = results[\"value_function\"]          # final value function\n",
     "\n",
@@ -158,7 +159,7 @@
    "metadata": {},
    "source": [
     "### Gridworld example\n",
-    "To see a more detailed example of how value iteration can be used to solve a problem in a Gridworld environment, see `Examples/Gridworld_nxm/Solving_Gridworld.ipynb` in this repository."
+    "To see a more detailed example of how value iteration can be used to solve a problem in a Gridworld environment, see [Examples/Gridworld_nxm/Solving_Gridworld.ipynb](https://github.com/turtlesoul25/value_iteration/tree/main/Examples/Gridworld_nxm) in this repository."
    ]
   },
   {
@@ -180,8 +181,7 @@
    "source": [
     "## GitHub Repository\n",
     "\n",
-    "Source files for the packages can be found at\n",
-    "<https://github.com/turtlesoul25/value_iteration>."
+    "Source files for the packages can be found at <https://github.com/turtlesoul25/value_iteration/tree/main/package>."
    ]
   },
   {
