testing updated package

--- a/Examples/Gridworld_nxm/Solving_Gridworld.ipynb
+++ b/Examples/Gridworld_nxm/Solving_Gridworld.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import functions to setup gridworld problem data from gridworld_generators.py\n",
     "from gridworld_generators import prob_func_generator, reward_func_generator\n",
-    "from value_iteration import value_iteration\n",
+    "from value_iteration.value_iteration import value_iteration\n",
     "\n",
     "# Import packages\n",
     "import numpy as np\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,18 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m gamma \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.9\u001b[39m                                                             \u001b[38;5;66;03m# Discount factor\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Implement value iteration algorithm\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mvalue_iteration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mS_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mA_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mP_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgamma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_iterations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Display results \u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOptimal Value Function:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal Value Function:\n",
+      "[20.7215, 26.1896, 30.5507, 34.6394, 29.4104]\n",
+      "[26.1896, 30.2301, 35.4389, 41.4688, 37.5332]\n",
+      "[30.5507, 35.4389, 42.7033, 50.4504, 44.0891]\n",
+      "[34.6394, 41.4688, 50.4504, 45.8839, 51.1151]\n",
+      "[29.4104, 37.5332, 44.0891, 51.1151, 40.4427]\n",
+      "\n",
+      "Optimal Policy:\n",
+      "['RIGHT', 'RIGHT', 'DOWN', 'DOWN', 'DOWN']\n",
+      "['DOWN', 'RIGHT', 'RIGHT', 'DOWN', 'DOWN']\n",
+      "['RIGHT', 'DOWN', 'RIGHT', 'DOWN', 'DOWN']\n",
+      "['RIGHT', 'RIGHT', 'RIGHT', 'RIGHT', 'LEFT']\n",
+      "['RIGHT', 'RIGHT', 'RIGHT', 'UP', 'UP']\n"
      ]
     }
    ],
