Updated README, ready to submit!

--- a/README.ipynb
+++ b/README.ipynb
@@ -105,6 +105,8 @@
     "from value_iteration import value_iteration\n",
     "S = {\"sick\", \"healthy\"} # set of states\n",
     "A = {\"relax\", \"party\"}  # set of actions\n",
+    "gamma = 0.8             # Discount factor\n",
+    "max_iterations = 1000   # maximum number of iterations\n",
     "def P(sp, s, a): # function to calculate transition probabilities\n",
     "    if s == \"healthy\":\n",
     "        if a == \"relax\":\n",
@@ -144,7 +146,7 @@
     "            return 2\n",
     "\n",
     "# Implementing the value iteration algorithm to solve the MDP\n",
-    "results = value_iteration(S, A, P, R, 0.8, 1000)    # implement algorithm\n",
+    "results = value_iteration(S, A, P, R, gamma, max_iterations)    # implement algorithm\n",
     "optimal_policy = results[\"optimal_policy\"]          # optimal policy\n",
     "value_function = results[\"value_function\"]          # final value function\n",
     "\n",
